<resources>
    <string name="app_name">SkyAI</string>

    <string name="appwidget_text">Weather Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Resizeable Weather Widget with details and hourly forecast</string>
    <string name="app_widget2_description">Small Weather Widget</string>
    <string name="app_widget3_description">Vertical Weather Widget</string>
    <string name="offline">OFFLINE</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">UV Index</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="forecast">Forecast</string>
    <string name="per_hour">Per Hour</string>
    <string name="per_day">Per Day</string>
    <string name="ask_ai">Ask AI</string>
    <string name="ai_assistant">Ai Assistant</string>
    <string name="today">Today</string>
    <string name="thinking">Thinking ...</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="send_notifications">Send Notifications</string>
    <string name="units_system">Units System</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="location">Location</string>
    <string name="update_location">Update Location</string>
    <string name="close_window">Close Window</string>
    <string name="let_s_set_things_up">Let\'s Set Things Up!</string>
    <string name="please_configure_the_settings_below">Please configure the settings below</string>
    <string name="required_settings">Required Settings</string>
    <string name="allow_daily_weather_notifications">Allow Daily Weather Notifications</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="allow_gps_to_get_your_location">Allow GPS to Get Your Location</string>
    <string name="set_current_location">Set Current Location</string>
    <string name="welcome_to">Welcome to</string>
    <string name="your_ai_weather_forecast_app">Your AI Weather Forecast APP</string>
    <string name="skyai">SkyAI</string>
    <string name="sorry_i_can_t_help_you_right_now">Sorry, i can\'t help you right now</string>
    <string name="invalid_api_key">Invalid API KEY</string>
    <string name="request_limit_reached">Request Limit Reached</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_getting_data_form_server_code">Error getting data form server ! - code: %1$s</string>
    <string name="clear">Clear</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="foggy">Foggy</string>
    <string name="raining">Raining</string>
    <string name="snowing">Snowing</string>
    <string name="freezing_drizzle">Freezing Drizzle</string>
    <string name="ice_pellets">Ice Pellets</string>
    <string name="thunder">Thunder</string>
    <string name="now">now</string>
    <string name="looking_at_sky">Looking at sky !</string>
    <string name="loading">loading</string>
    <string name="feels_like">"Feels Like "</string>
    <string name="onboarding_1_title">AI Enhanced Weather</string>
    <string name="onboarding_1_desc">Not just an ordinary weather app! It provides Ai assistant that helps you.</string>
    <string name="onboarding_2_title">Precise AI Analysis</string>
    <string name="onboarding_2_desc">Weather forecast is analyzed carefully depending on hourly and daily data.</string>
    <string name="onboarding_3_title">No Activity is Ruined</string>
    <string name="onboarding_3_desc">AI will help you decide the best time in day or day in week  to make your favorite outdoor activity without problems</string>
    <string name="start_app">Start App</string>
    <string name="next">Next</string>
    <string name="please_set_location_first">Please set location first !</string>
    <string name="done">Done !</string>
    <string name="loading_location">Detecting Location ...</string>
    <string name="updating_location">Updating Location ...</string>
    <string name="current">Current:</string>
    <string name="error_please_turn_on_internet_gps"><![CDATA[Error: Please turn on internet & GPS]]></string>
    <string name="its_temp_today">It\'s %1$s %2$s today</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="feels_like_c">%1$s | Feels Like %2$s</string>
    <string name="C">℃</string>
    <string name="F">℉</string>
    <string name="mi">mi</string>
    <string name="km">km</string>
    <string name="mph">mph</string>
    <string name="km_h">km/h</string>
    <string name="visibility">Visibility</string>
    <string name="app_language">App Language</string>
    <string name="change_language">Change Language</string>
</resources>